--- a/Fundamentals/convert_to_arrow.html
+++ b/Fundamentals/convert_to_arrow.html
@@ -11,18 +11,18 @@
     <p id="paragraph">
         This website is boring, with very little CSS. 
         However, we really just care about the javascript. 
-        For example, if you click <button id="button">this button</button>, the background of this paragraph tag will change to blue.
+        For example, if you click <button id="button">this button</button>, the background of this paragraph tag will change to blue.
     </p>
     <p>We also have a <button id="alert">alert</button> button that will grab the text from the input below and show it in a popup.</p>
     <div>
         <input type="text" id="popup-input">
     </div>
     <p>
-        We just like random interactivity in the site, including a fun effect if you hover over <span id="hover-this">        <b>this.</b></span>
+        We just like random interactivity in the site, including a fun effect if you hover over <span id="hover-this">          <b>this.</b></span>
     </p>
-    <p onmouseover="mouseOverFunction(this)">
+    <p id= "change" onmouseover="mouseOverFunction(this)">
         Another task: This should be another feature. 
-        I want to click anywhere in this paragraph tag and I want to be able to change the background color to whatever is in this input: <input type="text"/>.
+        I want to click anywhere in this paragraph tag and I want to be able to change the background color to whatever is in this input: <input id="newColor" type="text"/>.
     </p>
     <script>
         document.getElementById("button").onclick = () => setBackgroundColorById("paragraph", "blue");
@@ -33,7 +33,7 @@
 
         document.getElementById("hover-this").onmouseout = () => setBackgroundColorById("body", "white");
 
-        document.getElementById("feature").onclick = () => setBackgroundColorById("feature", document.getElementById("color-input").value);
+        document.getElementById("change").onclick = () => setBackgroundColorById("paragraph", document.getElementById("newColor").value);
 
         getValueFromId = (id) => document.getElementById(id).value;
 
